<?xml version="1.0"?>
<package format="2">
  <name>poseros</name>
  <version>0.0.1</version>
  <description>OpenPose for ROS</description>

  <!-- The maintainer tag -->
  <maintainer email="urabe0225@gmail.com">Kazuki Urabe</maintainer>
  <author email="urabe0225@gmail.com">Kazuki Urabe</author>

  <!-- The license tag -->
  <license>MIT</license>
  <!-- 
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <export>
  </export>
</package>
